--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -1,16 +1,24 @@
-name: Blob storage website CI
+name: Azure Static Web Apps CI/CD
 
 on:
   push:
-    branches: [dev]
+    branches:
+      - dev
+  pull_request:
+    types: [opened, synchronize, reopened, closed]
+    branches:
+      - dev
 
 jobs:
-  build:
-    environment: Main
+  build_and_deploy_job:
+    if: github.event_name == 'push' || (github.event_name == 'pull_request' && github.event.action != 'closed')
     runs-on: ubuntu-latest
+    environment: Main
+    name: Build and Deploy Job
     steps:
-      - uses: actions/checkout@v3
-
+      - uses: actions/checkout@v2
+        with:
+          submodules: true
       - name: Use Node.js 18
         uses: actions/setup-node@v3
         with:
@@ -22,19 +30,29 @@ jobs:
       - name: build
         run: npm run build
 
-      - uses: azure/login@v1
+      - name: Deploy
+        id: deploy
+        uses: Azure/static-web-apps-deploy@v1
         with:
-          creds: ${{ secrets.AZURE_CREDENTIALS }}
+          azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN }}
+          repo_token: ${{ secrets.GITHUB_TOKEN }} # Used for Github integrations (i.e. PR comments)
+          action: "upload"
+          ###### Repository/Build Configurations - These values can be configured to match your app requirements. ######
+          # For more information regarding Static Web App workflow configurations, please visit: https://aka.ms/swaworkflowconfig
+          app_location: "/build" # App source code path
+          api_location: "" # Api source code path - optional
+          output_location: "/" # Built app content directory - optional
+          ###### End of Repository/Build Configurations ######
 
-      - name: Upload to blob storage
-        uses: azure/CLI@v1
-        env:
-          STORAGE_ACCOUNT_NAME: ${{ secrets.STORAGE_ACCOUNT_NAME }}
+  close_pull_request_job:
+    if: github.event_name == 'pull_request' && github.event.action == 'closed'
+    runs-on: ubuntu-latest
+    name: Close Pull Request Job
+    environment: Main
+    steps:
+      - name: Close Pull Request
+        id: closepullrequest
+        uses: Azure/static-web-apps-deploy@v1
         with:
-          inlineScript: |
-            az storage blob upload-batch --account-name ${STORAGE_ACCOUNT_NAME} --auth-mode key -d '$web' -s build/
-      # Azure logout
-      - name: logout
-        run: |
-          az logout
-        if: always()
+          azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN }}
+          action: "close"
